# URL_Shortner

./: README.md  appspec.yml  buildspec.yml  infrastrucure.yaml  main.py  pyproject.toml
aws/ec2/: starting.sh
aws/sqs/: push_sqs.py
cloudformation/: p1.yaml  p2.yaml  p3.yaml  p4.yaml
scripts/: install.sh  start.sh  stop.sh  validate.sh
serverless/: sendmail.py
src/analytics/: router.py
src/auth/: router.py
src/redirect/: router.py
tasks/: kinesis.py  sns.py  sqs.py
