[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "boto3>=1.43.38",
    "fastapi[standard]>=0.138.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlmodel>=0.0.39",
]
